ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - http:
      paths:
       - path: /test
         backend:
          serviceName: hello-node
          servicePort: 8080
